syntax = "proto3";

package dvote.types.v1;

import "common/vote.proto";

option go_package = "github.com/vocdoni/dvote-protobuf/go-vocdoni-types;vocdonitypes";

enum TxType {
	UNKNOWN = 0;
	NEWPROCESS = 1;
	CANCELPROCESS = 2;
	ADDPROCESSKEYS = 3;
	REVEALPROCESSKEYS = 4;
	ADDORACLE = 5;
	REMOVEORACLE = 6;
	ADDVALIDATOR = 7;
	REMOVEVALIDATOR = 8;
}

message Tx {
	oneof tx {
		VoteEnvelope vote = 2;
		NewProcessTx newProcess = 3;
		CancelProcessTx cancelProcess = 4;
		AdminTx admin = 5;
	}
	optional bytes signature = 1;
}

message NewProcessTx {
	TxType txtype = 1;
	bytes entityId = 2;
	bytes processId = 3;
	bytes mkRoot = 4;
	string  processType = 5;
	uint64 startBlock = 6;
	optional string mkURI = 7;
	uint64 numberOfBlocks = 8;
	string nonce = 9;  
}

message CancelProcessTx {
	TxType txtype = 1;
	bytes processId = 2;
	string nonce = 3;
}

message AdminTx {
	TxType txtype = 1;
	bytes processId = 2;
	optional bytes address = 3;
	optional bytes commitmentKey = 4;
	optional bytes encryptionPrivateKey = 5;
	optional bytes encryptionPublicKey = 6;
	optional uint32 keyIndex = 7;
	optional uint64 power = 8;
	optional bytes publicKey = 9;
	optional bytes revealKey = 10;
	string nonce = 11;  
}


